# skills

./: LICENSE  README.md
skills/page-streaming/: README.md  SKILL.md  requirements.txt
skills/page-streaming/references/: output-format.md  scroll-behavior.md
skills/page-streaming/scripts/: detect_page_type.py  page_streamer.py
skills/publish-skill/: README.md  SKILL.md
skills/skills-trending-analysis/: README.md  SKILL.md
skills/skills-trending-analysis/references/: output-format.md
skills/skills-trending-analysis/scripts/: analyze_trending.py  extract_trending.py  fetch_trending.py
skills/stream-crawler/: .gitignore  SKILL.md  pyproject.toml
skills/stream-crawler/scripts/: stream_crawler.py
tests/skills-trending-analysis/: SKILL_playwright.md  run_comparison.py
tests/skills-trending-analysis/scripts/: analyze_trending.py  extract_trending.py  fetch_trending_playwright.py
tests/skills-trending-analysis/tmp/: trending.json  trending_analysis.json
